--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -4,7 +4,11 @@ $font-main: "LatoBold", sans-serif;
 $font-main: "LatoLight", sans-serif;
 $font-main: "LatoRegular", sans-serif;
 
-$yellow-color: #ffea00;
-$grey-color: #414146;
-$bg-color: #f6f6f6;
-$light-grey-color: #cacaca;
+$blue-color: #709dca;
+$light-orange-color: #ffc155;
+$orange-color: #ffbb42;
+$dark-orange-color: #f6772c;
+$grey-color: #868686;
+$main-grey-color: #7b7b7b;
+$dark-grey-color: #394b50;
+$light-grey-color: #99a9ae;
