--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,8 +1,8 @@
-$font-main: "CenturyGothic", sans-serif;
+$font-gotham: "GothamBlackRegular", sans-serif;
 $font-main: "OpenSansRegular", sans-serif;
-$font-main: "LatoBold", sans-serif;
-$font-main: "LatoLight", sans-serif;
-$font-main: "LatoRegular", sans-serif;
+$font-bold: "LatoBold", sans-serif;
+$font-latolight: "LatoLight", sans-serif;
+$font-latoregular: "LatoRegular", sans-serif;
 
 $blue-color: #709dca;
 $light-orange-color: #ffc155;
