--- a/styles/_fonts.scss
+++ b/styles/_fonts.scss
@@ -1,6 +1,6 @@
 @font-face {
-  font-family: "CenturyGothic";
-  src: url('../fonts/Century-Gothic.ttf') format('truetype');
+  font-family: "GothamBlackRegular";
+  src: url('../fonts/Gotham Black Regular.ttf') format('truetype');
 }
 
 @font-face {
