--- a/styles/style.scss
+++ b/styles/style.scss
@@ -32,6 +32,21 @@ section {
   }
 }
 
+.input-name {
+  background: url("../images/name.png") no-repeat 5%;
+  background-color: #fff;
+}
+
+.input-email {
+  background: url("../images/email.png") no-repeat 5%;
+  background-color: #fff;
+}
+
+.input-number {
+  background: url("../images/phone.png") no-repeat 5%;
+  background-color: #fff;
+}
+
 input {
   border: none;
   border-radius: 2px;
@@ -41,9 +56,26 @@ input {
   font-size: 13px;
   color: #a9a9a9;
   padding-left: 40px;
+  margin: 0 4px;
 }
 
 form {
   margin-top: 28px;
   margin-bottom: 60px;
+}
+
+.submit-btn {
+  background-color: $orange-color;
+  padding: 0 42px;
+  margin: 0 4px;
+}
+
+button {
+  font-size: 14px;
+  font-family: $font-latoregular;
+  text-transform: uppercase;
+  color: #fff;
+  border: none;
+  border-radius: 2px;
+  height: 46px;
 }
