--- a/styles/style.scss
+++ b/styles/style.scss
@@ -19,11 +19,13 @@ section {
   h1 {
     font-size: 35px;
     font-family: $font-gotham;
+    text-transform: uppercase;
   }
 
   h2 {
     font-size: 30px;
     font-family: $font-gotham;
+    text-transform: uppercase;
   }
 
   p {
