--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -25,6 +25,7 @@
     padding: 10px 20px;;
     color: $grey-color;
     font-size: 16px;
+    text-transform: uppercase;
 
     &:hover {
       color: $light-orange-color;
