--- a/styles/_section4.scss
+++ b/styles/_section4.scss
@@ -1,1 +1,31 @@
 @import "variables";
+
+.your-price {
+  background-color: #e7edf3;
+  text-align: center;
+  padding-bottom: 160px;
+
+  .section-header {
+    p {
+      color: #75888d;
+    }
+  }
+
+  .price-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 46px;
+
+    li {
+      width: 390px;
+      height: 440px;
+      background-color: #fff;
+
+      &:nth-child(2) {
+        height: 500px;
+        background-color: $blue-color;
+      }
+    }
+  }
+}
