--- a/styles/_section4.scss
+++ b/styles/_section4.scss
@@ -83,10 +83,9 @@
       }
 
       .main-btn {
-        background: $light-orange-color;
+        background: $orange-color;
         padding-left: 18px;
         padding-right: 18px;
-
       }
     }
   }
