--- a/styles/_section5.scss
+++ b/styles/_section5.scss
@@ -1,1 +1,93 @@
 @import "variables";
+
+.how-it-works {
+  padding-bottom: 160px;
+  text-align: center;
+
+  .section-header {
+    p {
+      color: #75888d;
+    }
+  }
+
+  .steps-list {
+    margin-top: 110px;
+    display: flex;
+    justify-content: space-between;
+
+    li {
+      width: 20%;
+      padding-top: 160px;
+
+      &:nth-child(1) {
+        background: url("../images/step1.png") 50% 0 no-repeat;
+        position: relative;
+
+        &:after {
+          background: url("../images/arrow.png") no-repeat;
+          content: '';
+          height: 34px;
+          width: 129px;
+          position: absolute;
+          top: -14px;
+          right: -108px;
+        }
+      }
+
+      &:nth-child(2) {
+        background: url("../images/step2.png") 50% 0 no-repeat;
+        position: relative;
+
+        &:after {
+          background: url("../images/arrow1.png") no-repeat;
+          content: '';
+          height: 34px;
+          width: 129px;
+          position: absolute;
+          top: 74px;
+          right: -108px;
+        }
+      }
+
+      &:nth-child(3) {
+        background: url("../images/step3.png") 50% 0 no-repeat;
+        position: relative;
+
+        &:after {
+          background: url("../images/arrow.png") no-repeat;
+          content: '';
+          height: 34px;
+          width: 129px;
+          position: absolute;
+          top: -14px;
+          right: -108px;
+        }
+      }
+
+      &:nth-child(4) {
+        background: url("../images/step4.png") 50% 0 no-repeat;
+      }
+
+      h3 {
+        font-family: $font-bold;
+        font-size: 20px;
+        color: $dark-grey-color;
+        margin-bottom: 26px;
+        text-transform: uppercase;
+      }
+
+      p {
+        font-size: 13px;
+        color: $main-grey-color;
+        line-height: 22px;
+      }
+    }
+  }
+
+  .main-btn {
+    background: $orange-color;
+    padding-left: 24px;
+    padding-right: 24px;
+    margin-top: 90px;
+  }
+}
