--- a/styles/_section4.scss
+++ b/styles/_section4.scss
@@ -86,6 +86,7 @@
         background: $orange-color;
         padding-left: 18px;
         padding-right: 18px;
+        margin-top: 12px;
       }
     }
   }
